--- a/packages.bib
+++ b/packages.bib
@@ -34,6 +34,13 @@
   note = {R package version 3.3.2},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
+@Manual{R-janitor,
+  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+  author = {Sam Firke},
+  year = {2020},
+  note = {R package version 2.0.1},
+  url = {https://CRAN.R-project.org/package=janitor},
+}
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
@@ -67,6 +74,13 @@
   year = {2020},
   note = {R package version 2.2},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+@Manual{R-skimr,
+  title = {skimr: Compact and Flexible Summaries of Data},
+  author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
+  year = {2020},
+  note = {R package version 2.1.1},
+  url = {https://CRAN.R-project.org/package=skimr},
 }
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
